--- a/output.css
+++ b/output.css
@@ -967,6 +967,10 @@ video {
   width: 1px;
 }
 
+.w-6 {
+  width: 1.5rem;
+}
+
 .min-w-\[20px\] {
   min-width: 20px;
 }
@@ -1397,6 +1401,11 @@ video {
   background-color: rgb(255 255 255 / 0.9);
 }
 
+.bg-red-600 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(220 38 38 / var(--tw-bg-opacity));
+}
+
 .bg-opacity-30 {
   --tw-bg-opacity: 0.3;
 }
@@ -1467,6 +1476,10 @@ video {
 
 .p-8 {
   padding: 2rem;
+}
+
+.p-3 {
+  padding: 0.75rem;
 }
 
 .px-10 {
@@ -1552,6 +1565,11 @@ video {
 .py-8 {
   padding-top: 2rem;
   padding-bottom: 2rem;
+}
+
+.py-16 {
+  padding-top: 4rem;
+  padding-bottom: 4rem;
 }
 
 .pb-16 {
