--- a/output.css
+++ b/output.css
@@ -604,6 +604,10 @@ video {
   bottom: 1rem;
 }
 
+.bottom-6 {
+  bottom: 1.5rem;
+}
+
 .left-0 {
   left: 0px;
 }
@@ -620,6 +624,10 @@ video {
   left: 1rem;
 }
 
+.right-0 {
+  right: 0px;
+}
+
 .top-0 {
   top: 0px;
 }
@@ -630,10 +638,6 @@ video {
 
 .top-\[78\%\] {
   top: 78%;
-}
-
-.bottom-0 {
-  bottom: 0px;
 }
 
 .z-0 {
@@ -796,10 +800,6 @@ video {
   margin-top: auto;
 }
 
-.mb-96 {
-  margin-bottom: 24rem;
-}
-
 .block {
   display: block;
 }
@@ -862,6 +862,10 @@ video {
 
 .h-6 {
   height: 1.5rem;
+}
+
+.h-7 {
+  height: 1.75rem;
 }
 
 .h-8 {
@@ -952,8 +956,16 @@ video {
   width: 1.5rem;
 }
 
+.w-7 {
+  width: 1.75rem;
+}
+
 .w-8 {
   width: 2rem;
+}
+
+.w-96 {
+  width: 24rem;
 }
 
 .w-\[32rem\] {
@@ -1061,6 +1073,11 @@ video {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
+.translate-x-full {
+  --tw-translate-x: 100%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
 .transform {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
@@ -1069,10 +1086,6 @@ video {
   -webkit-user-select: none;
      -moz-user-select: none;
           user-select: none;
-}
-
-.resize-none {
-  resize: none;
 }
 
 .resize-y {
@@ -1215,10 +1228,6 @@ video {
   white-space: nowrap;
 }
 
-.whitespace-nowrap {
-  white-space: nowrap;
-}
-
 .break-words {
   overflow-wrap: break-word;
 }
@@ -1315,6 +1324,11 @@ video {
   border-color: rgb(255 255 255 / 0.05);
 }
 
+.bg-\[\#0f1012\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(15 16 18 / var(--tw-bg-opacity));
+}
+
 .bg-\[\#16181c\] {
   --tw-bg-opacity: 1;
   background-color: rgb(22 24 28 / var(--tw-bg-opacity));
@@ -1387,6 +1401,10 @@ video {
   background-color: rgb(0 0 0 / 0.5);
 }
 
+.bg-black\/70 {
+  background-color: rgb(0 0 0 / 0.7);
+}
+
 .bg-gray-200 {
   --tw-bg-opacity: 1;
   background-color: rgb(229 231 235 / var(--tw-bg-opacity));
@@ -1410,11 +1428,6 @@ video {
 .bg-red-600 {
   --tw-bg-opacity: 1;
   background-color: rgb(220 38 38 / var(--tw-bg-opacity));
-}
-
-.bg-red-700 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(185 28 28 / var(--tw-bg-opacity));
 }
 
 .bg-white {
@@ -1520,6 +1533,11 @@ video {
   padding-right: 0.5rem;
 }
 
+.px-3 {
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
+}
+
 .px-4 {
   padding-left: 1rem;
   padding-right: 1rem;
@@ -1613,6 +1631,10 @@ video {
   padding-bottom: 4rem;
 }
 
+.pb-24 {
+  padding-bottom: 6rem;
+}
+
 .pb-4 {
   padding-bottom: 1rem;
 }
@@ -1631,6 +1653,10 @@ video {
 
 .pl-24 {
   padding-left: 6rem;
+}
+
+.pl-3 {
+  padding-left: 0.75rem;
 }
 
 .pl-6 {
@@ -1681,24 +1707,16 @@ video {
   padding-top: 1rem;
 }
 
+.pt-52 {
+  padding-top: 13rem;
+}
+
 .pt-6 {
   padding-top: 1.5rem;
 }
 
 .pt-8 {
   padding-top: 2rem;
-}
-
-.pt-96 {
-  padding-top: 24rem;
-}
-
-.pt-52 {
-  padding-top: 13rem;
-}
-
-.pb-24 {
-  padding-bottom: 6rem;
 }
 
 .text-left {
@@ -1794,6 +1812,10 @@ video {
   line-height: 1.25;
 }
 
+.tracking-\[0\.15rem\] {
+  letter-spacing: 0.15rem;
+}
+
 .tracking-\[0\.25em\] {
   letter-spacing: 0.25em;
 }
@@ -1885,11 +1907,6 @@ video {
 .text-neutral-500 {
   --tw-text-opacity: 1;
   color: rgb(115 115 115 / var(--tw-text-opacity));
-}
-
-.text-red-500 {
-  --tw-text-opacity: 1;
-  color: rgb(239 68 68 / var(--tw-text-opacity));
 }
 
 .text-red-600 {
@@ -2038,9 +2055,24 @@ video {
   will-change: transform;
 }
 
+.hover\:translate-x-2:hover {
+  --tw-translate-x: 0.5rem;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.hover\:bg-\[\#1a1b1e\]:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(26 27 30 / var(--tw-bg-opacity));
+}
+
 .hover\:bg-\[\#2a2e36\]:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(42 46 54 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-\[\#857b5b\]:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(133 123 91 / var(--tw-bg-opacity));
 }
 
 .hover\:bg-black:hover {
@@ -2053,11 +2085,6 @@ video {
   background-color: rgb(229 231 235 / var(--tw-bg-opacity));
 }
 
-.hover\:bg-red-700:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(185 28 28 / var(--tw-bg-opacity));
-}
-
 .hover\:bg-white:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
@@ -2065,20 +2092,6 @@ video {
 
 .hover\:bg-white\/10:hover {
   background-color: rgb(255 255 255 / 0.1);
-}
-
-.hover\:bg-\[\]:hover {
-  background-color: ;
-}
-
-.hover\:bg-\[\#AEA37D\]:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(174 163 125 / var(--tw-bg-opacity));
-}
-
-.hover\:bg-\[\#857b5b\]:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(133 123 91 / var(--tw-bg-opacity));
 }
 
 .hover\:text-\[\#2E3A44\]:hover {
@@ -2175,10 +2188,6 @@ video {
     flex-direction: row;
   }
 
-  .sm\:flex-nowrap {
-    flex-wrap: nowrap;
-  }
-
   .sm\:space-x-4 > :not([hidden]) ~ :not([hidden]) {
     --tw-space-x-reverse: 0;
     margin-right: calc(1rem * var(--tw-space-x-reverse));
@@ -2221,10 +2230,6 @@ video {
 
   .md\:grid-cols-4 {
     grid-template-columns: repeat(4, minmax(0, 1fr));
-  }
-
-  .md\:grid-cols-\[30\%_70\%\] {
-    grid-template-columns: 30% 70%;
   }
 
   .md\:text-4xl {
