--- a/output.css
+++ b/output.css
@@ -2099,12 +2099,24 @@ video {
 }
 
 @media (min-width: 640px) {
+  .sm\:block {
+    display: block;
+  }
+
+  .sm\:flex {
+    display: flex;
+  }
+
   .sm\:grid {
     display: grid;
   }
 
   .sm\:h-20 {
     height: 5rem;
+  }
+
+  .sm\:h-5 {
+    height: 1.25rem;
   }
 
   .sm\:w-1\/3 {
@@ -2121,6 +2133,14 @@ video {
 
   .sm\:w-auto {
     width: auto;
+  }
+
+  .sm\:w-96 {
+    width: 24rem;
+  }
+
+  .sm\:w-5 {
+    width: 1.25rem;
   }
 
   .sm\:grid-cols-2 {
@@ -2141,6 +2161,14 @@ video {
 
   .sm\:gap-4 {
     gap: 1rem;
+  }
+
+  .sm\:p-2 {
+    padding: 0.5rem;
+  }
+
+  .sm\:p-2\.5 {
+    padding: 0.625rem;
   }
 
   .sm\:px-12 {
@@ -2221,18 +2249,6 @@ video {
 
   .md\:aspect-\[6\.5\/8\] {
     aspect-ratio: 6.5/8;
-  }
-
-  .md\:h-24 {
-    height: 6rem;
-  }
-
-  .md\:h-auto {
-    height: auto;
-  }
-
-  .md\:h-28 {
-    height: 7rem;
   }
 
   .md\:h-20 {
